# MLOps_example

./: README.md  docker-compose.yml  messy_file.py  pyproject.toml
.github/workflows/: ci-build.yaml
backend/: Dockerfile  README.md  app.py  pyproject.toml
backend/src/features/: build_features.py
backend/src/models/: predict_model.py  train_model.py
frontend/: README.md  app.py  pyproject.toml
