[project]
name = "MLOps_example"
version = "0.1.0"
description = "Example for DataMinds bootcamp"
readme = "README.md"
requires-python = ">= 3.12"
authors = [{ name = "Elkhn", email = "elxana@azercell.com" }]
dependencies = [
    # runtime deps go here, e.g. "pandas>=2.2"
]

# [tool.ruff]
# lint.extend-select = ["ALL"]

[tool.black]
line-length = 100
extend-exclude = '^(data|reports|models|notebooks)/'

[tool.isort]
profile = "black" # keeps isort compatible with Black
line_length = 100
src_paths = ["src"]
extend_skip = ["data", "reports", "models", "notebooks"]