[project]
name = "MLOps_example"
version = "0.1.0"
description = "Example for DataMinds bootcamp"
readme = "README.md"
requires-python = ">= 3.12"
authors = [{ name = "Elkhn", email = "elxana@azercell.com" }]
dependencies = [
    "openpyxl>=3.1.5",
    # runtime deps go here, e.g. "pandas>=2.2"
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
]

# [tool.ruff]
# lint.extend-select = ["ALL"]

[tool.ruff.lint]
ignore = ["E402"]

[tool.black]
line-length = 100
extend-exclude = '^(data|reports|models|notebooks)/'

[tool.isort]
profile = "black" # keeps isort compatible with Black
line_length = 100
skip_glob = ["data/**", "reports/**", "models/**", "notebooks/**"]
