[project]
name = "MLOps_backend_service"
version = "0.1.0"
description = "Example of FastAPI backend for DataMinds bootcamp"
readme = "README.md"
requires-python = ">= 3.12"
authors = [{ name = "musanebizade", email = "musanebi2005@gmail.com" }]
dependencies = [
    "category-encoders>=2.8.1",
    "fastapi>=0.116.1",
    "openpyxl>=3.1.5",
    # runtime deps go here, e.g. "pandas>=2.2"
    "pandas>=2.3.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "streamlit>=1.48.1",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.4",
]

# [tool.ruff]
# lint.extend-select = ["ALL"]

[tool.ruff.lint]
ignore = ["E402"]

[tool.black]
line-length = 100
extend-exclude = '^(data|reports|models|notebooks)/'

[tool.isort]
profile = "black" # keeps isort compatible with Black
line_length = 100
skip_glob = ["data/**", "reports/**", "models/**", "notebooks/**"]
