[project]
name = "MLOps_frontend_service"
version = "0.1.0"
description = "Example of Streamlit frontend for DataMinds bootcamp"
readme = "README.md"
requires-python = ">= 3.12"
authors = [{ name = "musanebizade", email = "musanebi2005@gmail.com" }]
dependencies = [
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
    "streamlit>=1.48.1",
]

# [tool.ruff]
# lint.extend-select = ["ALL"]

[tool.ruff.lint]
ignore = ["E402"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black" # keeps isort compatible with Black
line_length = 100
